fix align

--- a/css/ronaldi.css
+++ b/css/ronaldi.css
@@ -14,7 +14,7 @@ body{
 #profile{
   z-index: 0;
   text-align: center;
-  margin-top: 180px;
+  margin-top: 150px;
   padding: 20px;
 }
 
